Increased font sizes, fixed navbar collapse

--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
   body {
 
-      font: 400 15px Lato, sans-serif;
+      font: 400 18px Lato, sans-serif;
       line-height: 1.8;
       color: #818181;
   }
+
+  h1 {
+      font-size: 48px;
+  }
+
   h2 {
-      font-size: 30px;
-      text-transform: uppercase;
-      color: #818181;
-      font-weight: 600;
-      margin-bottom: 30px;
-      font-family: Arial, Helvetica, sans-serif;
+      font-size: 36px;
+      color: white;
+      font-family: sans-serif;
       text-align: center;
   }
 
@@ -20,24 +22,29 @@
 
   h4 {
       font-size: 19px;
-      line-height: 1.375em;
       color: #303030;
       font-weight: 400;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
   }  
 
   p {
       font-size: 20px;
   }
 
+  li {
+      font-size: 20px;
+  }
+
 
   .jumbotron {
+      height: 400px;
       background-image: url("razor.png");
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
       color: white;
-      padding: 100px 25px;
+      padding-top: 50px;
+      padding-bottom: 50px;
       font-family: 'oswald', sans-serif;
       text-shadow: 5px 5px 10px black;
   }
@@ -56,26 +63,7 @@
       color: #003366;
       font-size: 200px;
   }
-  .thumbnail {
-      padding: 0 0 15px 0;
-      border: none;
-      border-radius: 0;
-  }
-  .thumbnail img {
-      width: 100%;
-      height: 100%;
-      margin-bottom: 10px;
-  }
-  .carousel-control.right, .carousel-control.left {
-      background-image: none;
-      color: #003366;
-  }
-  .carousel-indicators li {
-      border-color: #003366;
-  }
-  .carousel-indicators li.active {
-      background-color:#003366;
-  }
+ 
   .item h4 {
       font-size: 19px;
       line-height: 1.375em;
